--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".profiling.ForgotPassword">
 
@@ -51,19 +52,35 @@
             android:shadowDy="2"
             android:shadowColor="#C0C0C0"/>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="60dp"
+            app:cardBackgroundColor="@color/darken"
+            app:cardCornerRadius="8dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/emailField"
+            app:boxStrokeColor="@color/black"
+            app:hintTextColor="@color/black"
             android:layout_width="350dp"
             android:layout_height="55dp"
             android:hint="@string/email"
             android:layout_gravity="center"
-            android:layout_marginTop="100dp">
+            android:layout_marginTop="10dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/textborder1"
                 android:drawableStart="@drawable/baseline_email_24"
+                android:layout_marginTop="20dp"
                 android:drawablePadding="10dp"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"/>
@@ -77,7 +94,11 @@
             android:textSize="20sp"
             android:text="@string/send_code"
             android:layout_marginTop="20dp"
+            android:backgroundTint="@color/lavender"
             android:layout_gravity="center"/>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
