--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -72,6 +72,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
+                    app:boxStrokeColor="@color/black"
+                    app:hintTextColor="@color/black"
                     app:errorEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -89,10 +91,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:hint="@string/password"
-                    app:boxStrokeColor="@color/black"
                     app:endIconMode="password_toggle"
                     app:errorEnabled="true"
                     app:errorIconDrawable="@null"
+                    app:boxStrokeColor="@color/black"
                     app:hintTextColor="@color/black"
                     app:startIconDrawable="@drawable/baseline_lock_24">
 
@@ -104,6 +106,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
+                    android:id="@+id/tv_forgot"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
